Add: Korinsik Identity i Jwt authentication

--- a/BrainfinityAPI/appsettings.json
+++ b/BrainfinityAPI/appsettings.json
@@ -1,11 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PC-TIM2\\SQLEXPRESS;Database=BrainfinityDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-VT8FC53;Database=BrainfinityDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ThisIsMySecretKey",
+    "Issuer": "Test.com"
+  }
 }
