--- a/BrainfinityAPI/Properties/launchSettings.json
+++ b/BrainfinityAPI/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:61022",
       "sslPort": 44359
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      //"launchUrl": "api/takmicenje",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
